force-app/main/default/objects/Admissions_Document__c/Admissions_Document__c.object-meta.xml
<CustomObject>
    <label>Admissions Document</label>
    <nameField>
        <label>Admissions Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admissions Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>