force-app/main/default/objects/Admissions_Document__c/fields/Allow_Upload__c.field-meta.xml
<CustomField>
    <fullName>Allow_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Upload</label>
    <type>Checkbox</type>
</CustomField>