force-app/main/default/objects/Admissions_Document__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Admissions Documents</relationshipLabel>
    <relationshipName>Admissions_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>