force-app/main/default/objects/Admissions_Document__c/fields/Display_Instructive_Text__c.field-meta.xml
<CustomField>
    <fullName>Display_Instructive_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Instructive Text</label>
    <type>Checkbox</type>
</CustomField>