force-app/main/default/objects/Admissions_Document__c/fields/Display_to_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Display_to_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display to Applicant</label>
    <type>Checkbox</type>
</CustomField>