force-app/main/default/objects/Admissions_Document__c/fields/Displayed_Name__c.field-meta.xml
<CustomField>
    <fullName>Displayed_Name__c</fullName>
    <label>Displayed Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>