force-app/main/default/objects/Admissions_Document__c/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <label>Document Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High School Transcript</fullName>
            </value>
            <value>
                <fullName>College Transcript</fullName>
            </value>
            <value>
                <fullName>Letter of Recommendation</fullName>
            </value>
            <value>
                <fullName>Paper Application</fullName>
            </value>
            <value>
                <fullName>Essay</fullName>
            </value>
            <value>
                <fullName>GI Bill</fullName>
            </value>
            <value>
                <fullName>Housing Application</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Green Card</fullName>
            </value>
            <value>
                <fullName>High School Diploma</fullName>
            </value>
            <value>
                <fullName>College Diploma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>