force-app/main/default/objects/Admissions_Document__c/fields/Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_URL__c</fullName>
    <label>Form URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>