force-app/main/default/objects/Admissions_Document__c/fields/Instructive_Text__c.field-meta.xml
<CustomField>
    <fullName>Instructive_Text__c</fullName>
    <label>Instructive Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>